--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
   "manifest_version": 2,
   "name": "__MSG_extension_name__",
-  "version": "1.0",
+  "version": "1.1",
   "description": "__MSG_extension_description__",
 
-  "default_locale": "en_US",
   "content_scripts": [
     {
       "all_frames": true,
@@ -16,5 +15,9 @@
       "matches": [ "<all_urls>" ],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "default_locale": "en_US",
+  "icons": {
+    "48": "assets/icon48.png"
+  }
 }
